--- a/androiddev/app/src/main/res/layout/activity_task_list.xml
+++ b/androiddev/app/src/main/res/layout/activity_task_list.xml
@@ -24,7 +24,7 @@
         android:layout_height="0dp" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/listOnline"
+        android:id="@+id/taskList"
         android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
