--- a/androiddev/app/src/main/res/layout/task_layout.xml
+++ b/androiddev/app/src/main/res/layout/task_layout.xml
@@ -2,37 +2,40 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    app:cardElevation="10dp"
-    android:layout_margin="16dp">
-
+    android:layout_height="50dp"
+    android:layout_margin="5dp"
+    app:cardBackgroundColor="@color/colorPrimaryDark"
+    app:cardElevation="10dp">
 
     <LinearLayout
-        android:weightSum="10"
-        android:orientation="horizontal"
-        android:layout_gravity="center_vertical"
-        android:padding="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="5dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal"
+        android:padding="5dp"
+        android:weightSum="10">
 
         <ImageView
             android:id="@+id/check"
-            android:visibility="invisible"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginBottom="1dp"
             android:layout_marginRight="1dp"
-            android:layout_gravity="center_vertical"
             android:layout_weight="2"
-            android:src="@drawable/baseline_check_black_18dp" />
+            android:adjustViewBounds="false"
+            android:src="@drawable/baseline_check_black_18dp"
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/txt_task_name"
-            android:text="test@gmail.com"
-            android:textSize="24sp"
-            android:layout_weight="8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="8"
+            android:text="test@gmail.com"
+            android:textSize="24sp" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
