Implemented signout, some ui changes

--- a/androiddev/app/src/main/res/layout/activity_task_list.xml
+++ b/androiddev/app/src/main/res/layout/activity_task_list.xml
@@ -12,10 +12,11 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="?attr/colorPrimaryDark" />
+        android:elevation="4dp"
+        android:textColorSecondary="@color/white"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"/>
+
 
     <View
         android:id="@+id/anchor_dropdown"
